--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,3 +8,9 @@ dependencies = [
     "gitpython>=3.1.44",
     "pyqt6>=6.8.1",
 ]
+
+[dependency-groups]
+dev = [
+    "black>=25.1.0",
+    "isort>=6.0.1",
+]
