在 `pyproject.toml` 中新增了 Ruff 的配置，启用 flake8-logging-format 规则并指定需要检查的日志对象。这一改动有助于提升代码质量和一致性。

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,3 +16,10 @@ dev = [
     "isort>=6.0.1",
     "ruff>=0.11.4",
 ]
+
+[tool.ruff.lint]
+# Enable the flake8-logging-format rules
+select = ["G"]
+
+# Logger objects that should be checked
+logger-objects = ["app.logger", "logger"]
