--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,9 @@ dependencies = [
 dev = [
     "black>=25.1.0",
     "isort>=6.0.1",
+    "python-lsp-black>=2.0.0",
+    "python-lsp-isort>=0.2.1",
+    "python-lsp-ruff>=2.2.2",
     "ruff>=0.11.4",
 ]
 
