--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,11 +4,7 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
-dependencies = [
-    "aiohttp>=3.11.16",
-    "gitpython>=3.1.44",
-    "pyqt6>=6.8.1",
-]
+dependencies = ["aiohttp>=3.11.16", "gitpython>=3.1.44", "pyqt6>=6.8.1"]
 
 [dependency-groups]
 dev = [
@@ -26,3 +22,6 @@ select = ["G"]
 
 # Logger objects that should be checked
 logger-objects = ["app.logger", "logger"]
+
+[tool.isort]
+profile = "black"
