--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,10 +16,33 @@ dev = [
     "ruff>=0.11.4",
 ]
 
+[tool.ruff]
+line-length = 120
+
 [tool.ruff.lint]
 select = [
-    "G",    # G Enable the flake8-logging-format rules
-    "F821", # Checks for uses of undefined names.
+    "G", # G Enable the flake8-logging-format rules
+
+    # Pyflakes
+    "F", # Pyflakes rules (F821 checks undefined names)
+
+    # Pycodestyle
+    "E", # Error-level PEP 8 rules
+    "W", # Warning-level PEP 8 rules
+
+    # flake8 plugins
+    "G",   # flake8-logging-format rules
+    "B",   # flake8-bugbear rules
+    "C4",  # flake8-comprehensions rules
+    "N",   # pep8-naming rules
+    "SIM", # flake8-simplify rules
+    "ARG", # flake8-unused-arguments
+    "ERA", # eradicate (commented out code)
+    "PL",  # pylint rules
+    "RUF", # Ruff-specific rules
+
+    # Security
+    "S", # flake8-bandit (security)
 ]
 
 # Logger objects that should be checked
