--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,12 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
-dependencies = ["aiohttp>=3.11.16", "gitpython>=3.1.44", "pyqt6>=6.8.1"]
+dependencies = [
+    "aiohttp>=3.11.16",
+    "gitpython>=3.1.44",
+    "pygments>=2.19.1",
+    "pyqt6>=6.8.1",
+]
 
 [dependency-groups]
 dev = [
