--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,6 +45,7 @@ select = [
     # Security
     "S", # flake8-bandit (security)
 ]
+extend-select = ["I"]
 
 # Logger objects that should be checked
 logger-objects = ["app.logger", "logger"]
