--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,12 +12,7 @@ dependencies = [
 ]
 
 [dependency-groups]
-dev = [
-    "black>=25.1.0",
-    "isort>=6.0.1",
-    "python-lsp-black>=2.0.0",
-    "python-lsp-isort>=0.2.1",
-]
+dev = ["python-lsp-server"]
 
 [tool.ruff]
 line-length = 120
