在VSCode设置文件中添加Python虚拟环境路径配置

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,8 @@
     "files.autoSave": "onFocusChange",
     "editor.formatOnSave": true,
     //python & ruff
+    //python
+    "python.venvPath": ".venv",
     "[python]": {
         "diffEditor.ignoreTrimWhitespace": false,
         "editor.codeActionsOnSave": {
