--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -21,6 +21,9 @@ jobs:
         
     - name: Install Ruff
       run: pip install ruff
+
+    - name: Install uv
+      run: pip install uv
       
     - name: Run check.sh script
       run: |
