在check.sh中添加对Linux系统的支持，以便在Linux环境下使用xvfb运行单元测试。同时，在工作流配置中添加安装xvfb及其依赖项的步骤，确保测试环境的完整性。

--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -13,7 +13,13 @@ jobs:
     steps:
     - name: Checkout repository
       uses: actions/checkout@v3
-      
+
+    - name: Install dependencies
+      run: apt-get update && apt-get install -y libxcb-randr0 libxcb-shape0 libxcb-xinerama0 libxcb-icccm4 libxcb-keysyms1 libxcb-render0 libxkbcommon-x11-0 libxcb-xfixes0
+
+    - name: install xvfb
+      run: apt-get update && apt-get install -y xvfb
+
     - name: Set up Python 3.12
       uses: actions/setup-python@v4
       with:
