--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -15,10 +15,10 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Install dependencies
-      run: apt-get update && apt-get install -y libxcb-randr0 libxcb-shape0 libxcb-xinerama0 libxcb-icccm4 libxcb-keysyms1 libxcb-render0 libxkbcommon-x11-0 libxcb-xfixes0
+      run: sudo apt-get update && sudo apt-get install -y libxcb-randr0 libxcb-shape0 libxcb-xinerama0 libxcb-icccm4 libxcb-keysyms1 libxcb-render0 libxkbcommon-x11-0 libxcb-xfixes0
 
     - name: install xvfb
-      run: apt-get update && apt-get install -y xvfb
+      run: sudo apt-get update && sudo apt-get install -y xvfb
 
     - name: Set up Python 3.12
       uses: actions/setup-python@v4
