在工作流配置中添加安装EGL / OpenGL库的步骤，以确保测试环境具备所需的图形库支持。

--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -20,6 +20,9 @@ jobs:
     - name: install xvfb
       run: sudo apt-get update && sudo apt-get install -y xvfb libxcb-cursor0
 
+    - name: Install EGL / OpenGL libs
+      run: sudo apt-get install -y libegl1
+
     - name: Set up Python 3.12
       uses: actions/setup-python@v4
       with:
