chore: 更新 pyproject.toml，添加忽略规则
- 在配置文件中新增忽略规则 ["RUF001", "RUF002", "RUF003"]，以优化代码检查流程。

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,6 +41,7 @@ select = [
     "S", # flake8-bandit (security)
 ]
 extend-select = ["I"] # isort
+ignore = ["RUF001", "RUF002", "RUF003"]
 
 # Logger objects that should be checked
 logger-objects = ["app.logger", "logger"]
