--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -38,3 +38,11 @@ jobs:
       run: |
         chmod +x ./check.sh
         ./check.sh
+
+    - name: install pyqt6-dev-tools
+      run: sudo apt-get install -y pyqt6-dev-tools
+
+    - name: Run pylupdate6
+      run: |
+        pylupdate6 git_manager_window.py -ts translations/app_zh_CN.ts
+        pylupdate6 git_manager_window.py -ts translations/app_en_US.ts
