--- a/.github/workflows/translations.yml
+++ b/.github/workflows/translations.yml
@@ -27,7 +27,7 @@ jobs:
         python-version: '3.12'
         
     - name: install pyqt6-dev-tools
-      run: sudo apt-get install -y pyqt6-dev-tools
+      run: sudo apt-get update &&sudo apt-get install -y pyqt6-dev-tools
 
     - name: Run pylupdate6
       run: |
