--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.12"
 dependencies = [
     "aiohttp>=3.11.16",
     "gitpython>=3.1.44",
+    "pathspec>=0.12.1",
     "pygments>=2.19.1",
     "pyqt6>=6.8.1",
 ]
