--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "pathspec>=0.12.1",
     "pygments>=2.19.1",
     "pyqt6>=6.8.1",
+    "diff_match_patch"
 ]
 
 [dependency-groups]
