feat: 添加ripgrepy依赖并新增测试用例
- 在pyproject.toml和uv.lock中添加ripgrepy库的依赖。
- 新增tests/test_ripgrepy.py文件，包含对ripgrepy功能的单元测试，验证排除文件夹、全词匹配、忽略大小写和正则表达式搜索等功能。

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,8 @@ dependencies = [
     "pathspec>=0.12.1",
     "pygments>=2.19.1",
     "pyqt6>=6.8.1",
-    "diff_match_patch"
+    "diff_match_patch",
+    "ripgrepy>=2.1.0",
 ]
 
 [dependency-groups]
