--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -24,6 +24,9 @@ jobs:
     - name: Install EGL / OpenGL libs
       run: sudo apt-get install -y libegl1
 
+    - name: Install ripgrep
+      run: sudo apt-get install -y ripgrep
+
     - name: Set up Python 3.12
       uses: actions/setup-python@v4
       with:
