feat: 添加watchdog依赖以支持文件监控功能
- 在pyproject.toml和uv.lock中添加了watchdog库，版本为6.0.0，以增强文件监控能力。

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "pyqt6>=6.8.1",
     "diff_match_patch",
     "ripgrepy>=2.1.0",
+    "watchdog>=6.0.0",
 ]
 
 [dependency-groups]
